# ppt-helper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ppt_agentic_helper/: __init__.py  config.py  demo.py  files.py  models.py  openai_chat.py  planning.py  powerpoint.py  sample_data.py  server.py  service.py
tests/: test_core.py
